<resources>
    <string name="app_name">VASTU KOSH</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_to_vastu_kosh">New to Vastu Kosh?</string>
    <string name="signup">Signup</string>
    <string name="background_image">Background Image</string>
    <string name="vastu_kosh_1">VASTU KOSH</string>
    <string name="logo">Logo</string>
    <string name="email_address">Email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="vastu_kosh">VASTU KOSH</string>
    <string name="location">Location</string>
    <string name="mobile_number">Mobile number</string>
    <string name="i_agree_to_terms_and_conditions">I agree to terms and conditions.</string>
    <string name="password_hint" />
    <string name="view_t_c"><![CDATA[View T&C]]></string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="contact_us">CONTACT US</string>
    <string name="facebook">Facebook</string>
    <string name="user_name">User Name</string>
    <string name="contact">Contact</string>
    <string name="buy">Buy</string>
    <string name="about">About</string>
    <string name="give">Give</string>
    <string name="sell">Sell</string>
    <string name="rent">Rent</string>
    <string name="locker">Locker</string>
    <string name="title_activity_rent_sell">RentSellActivity</string>
    <string name="rent_sell_form">RENT SELL FORM</string>
    <string name="title_activity_buy_rent">BuyRentActivity</string>
    <string name="product_name">product name</string>
    <string name="title_activity_buy_rent_item">BuyRentItemActivity</string>
    <string name="title_activity_buy_rent_view_item">BuyRentViewItemActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_give">GiveActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_item">ProfileItemActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_locker">LockerActivity</string>
    <string name="title_activity_locker_form">LockerFormActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="about_us">About Us</string>
    <string name="it_is_a_start_up_company_made_by_students_of_srm_university_chennai_it_aims_to_solve_the_issue_of_people_residing_in_flats_generally_face_flats_are_often_too_small_to_accomodate_our_belongings_and_some_things_may_be_close_to_our_heart_our_sentiments_are_attached_to_them_it_aches_our_heart_to_just_discard_them_away">It is a start-up company made by students of SRM University, Chennai. It aims to solve the issue of people residing in flats generally face. Flats are often too small to accomodate our belongings and some things may be close to our heart, our sentiments are attached to them. It aches our heart to just discard them away.</string>
    <string name="so_presenting_an_idea_that_would_increase_the_space_in_your_home_for_new_items_and_preserve_the_items_you_love_in_safe_and_secure_lockers_vastu_kosh_provides_the_customers_with_four_options_storing_items_in_secure_lockers_giving_your_items_to_orphanages_or_old_age_homes_sell_your_items_and_rent_them_for_some_time">So, presenting an idea that would increase the space in your home for new items and preserve the items you love in safe and secure lockers. Vastu Kosh provides the customers with four options: Storing items in secure lockers, giving your items to orphanages or old age homes, Sell your items and Rent them for some time.</string>
    <string name="we_ensure_delivery_and_pick_up_so_that_you_don_39_t_have_to_travel_to_keep_your_products_safe_with_our_highly_specific_databases_you_can_find_out_which_products_you_have_trusted_us_with">We ensure delivery and pick up so that you don\'t have to travel to keep your products safe. With our highly specific databases you can find out which products you have trusted us with.</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="terms_and_conditions">TERMS AND CONDITIONS</string>
    <string name="vastu_kosh_terms_of_service_agreement">Vastu Kosh Terms of Service (“Agreement”)</string>
    <string name="this_agreement_was_last_modified_on_december_23_2017">This Agreement was last modified on December 23, 2017.</string>
    <string name="please_read_these_terms_of_service_completely_using_this_website_which_is_owned_and_operated_by_vastu_kosh_this_agreement_documents_the_legally_binding_terms_and_conditions_attached_to_the_use_of_this_website">Please read these Terms of Service completely, using this website which is owned and operated by Vastu Kosh. This Agreement documents the legally binding terms and conditions attached to the use of this website.</string>
    <string name="by_using_or_accessing_the_site_in_any_way_viewing_or_browsing_the_site_creating_account_or_using_the_services_you_are_agreeing_to_be_bound_by_these_terms_of_service">By using or accessing the Site in any way, viewing or browsing the Site, creating account or using the services, you are agreeing to be bound by these Terms of Service.</string>
    <string name="storing_items">Storing Items</string>
    <string name="in_case_any_illegal_items_are_found_contained_in_the_articles_then_vastu_kosh_cannot_be_held_responsible_for_those_items_those_articles_will_be_discarded_a_police_report_will_be_filed_against_the_owner_and_his_her_account_will_be_suspended_immediately_for_an_indefinite_period_of_time">In case any illegal items are found contained in the articles then Vastu Kosh cannot be held responsible for those items, those articles will be discarded, a police report will be filed against the owner and his/her account will be suspended immediately for an indefinite period of time.</string>
    <string name="pricing">Pricing</string>
    <string name="the_pricing_of_the_items_will_be_based_upon_their_material_and_the_amount_of_space_they_will_consume_in_the_locker_every_item_will_be_insured_with_a_small_amount_of_money_paid_by_the_customer">The pricing of the items will be based upon their material and the amount of space they will consume in the locker. Every item will be insured with a small amount of money paid by the customer.</string>
    <string name="insurance">Insurance</string>
    <string name="in_case_of_any_damage_to_the_item_or_theft_of_the_item_the_customers_can_claim_insurance_amount_that_they_pay_for_storing_the_items_in_the_locker_customer_cannot_claim_more_amount_of_money_than_the_insurance_amount">In case of any damage to the item, or theft of the item the customers can claim insurance amount that they pay for storing the items in the locker. Customer cannot claim more amount of money than the insurance amount.</string>
    <string name="termination">Termination</string>
    <string name="vastu_kosh_reserves_the_right_to_terminate_your_access_to_the_site_without_any_advance_notice_if_any_illegal_item_is_found_inside_the_articles_stored_in_our_lockers">Vastu Kosh reserves the right to terminate your access to the Site, without any advance notice if any illegal item is found inside the articles stored in our lockers.</string>
    <string name="return_refund_policy">Return/Refund Policy</string>
    <string name="once_a_user_buys_any_article_from_another_user_through_vastu_kosh_he_she_will_not_be_able_to_return_the_item_claiming_that_the_article_does_not_match_the_specifications_or_is_defective_we_will_send_items_to_be_sold_only_after_we_verify_its_condition_and_genuineness">Once a user buys any article from another user through Vastu Kosh, he/she will not be able to return the item claiming that the article does not match the specifications or is defective. We will send items to be sold only after we verify its condition and genuineness.</string>
    <string name="changes_to_this_agreement">Changes to this Agreement</string>
    <string name="vastu_kosh_reserves_the_right_to_modify_these_terms_of_service_at_any_time_we_do_so_by_posting_and_drawing_attention_to_the_updated_terms_on_the_site_your_decision_to_continue_to_visit_and_make_use_of_the_site_after_such_changes_have_been_made_constitutes_your_formal_acceptance_of_the_new_terms_of_service_therefore_we_ask_that_you_check_and_review_this_agreement_for_such_changes_on_an_occasional_basis_should_you_not_agree_to_any_provision_of_this_agreement_or_any_changes_we_make_to_this_agreement_we_ask_and_advice_that_you_do_not_use_or_continue_to_access_the_vastu_kosh_site_immediately">Vastu Kosh reserves the right to modify these terms of service at any time. We do so by posting and drawing attention to the updated terms on the site. Your decision to continue to visit and make use of the site after such changes have been made constitutes your formal acceptance of the new terms of service. Therefore, we ask that you check and review this agreement for such changes on an occasional basis. Should you not agree to any provision of this agreement or any changes we make to this agreement, we ask and advice that you do not use or continue to access the Vastu Kosh site immediately.</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="verify_email">Verify Email</string>
    <string name="please_verify_your_email_address_if_you_have_done_so_then_this_is_to_remind_you_to_update_adhaar_details_which_was_followed_by_email_verification_process">Please verify your email address. If you have done so then this is to remind you to update adhaar details which was followed by email verification process</string>
    <string name="if_you_have_accidentally_deleted_the_mail_please_click_on_resend_you_can_also_update_your_adhaar_details_in_our_website_vastukosh_co">If you have accidentally deleted the mail please click on RESEND. You can also update your adhaar details in our website vastukosh.co</string>
    <string name="resend">Resend</string>
    <string name="item_name">Item Name</string>
    <string name="item_image">Item image</string>
    <string name="item_price">Item Price</string>
    <string name="item_type">Item Type</string>
    <string name="item_subtype">Item Subtype</string>
    <string name="item_owner">Item Owner</string>
    <string name="item_count">Item Count</string>
    <string name="item_description">Item Description</string>
    <string name="item_duration">Item Duration</string>
    <string name="how_much_will_you_pay">How much will you pay?</string>
    <string name="interested">Interested</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="type_the_field_s_you_want_to_edit">Type the field(s) you want to edit</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="give_form">GIVE FORM</string>
    <string name="locker_form">Locker Form</string>
    <string name="count">Count</string>
    <string name="email">Email</string>
    <string name="storage_duration">Storage Duration</string>
    <string name="any_item_stored_in_locker_should_be_kept_for_a_minimum_duration_of_one_1_month_before_retrieval">Any item stored in locker should be kept for a minimum duration of one (1) month before retrieval.</string>
</resources>