<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vastukosh.client.android.TAndCActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#204999"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="VASTU KOSH"
        app:titleTextColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:contentDescription="@string/background_image" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/terms_and_conditions"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/vastu_kosh_terms_of_service_agreement"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/this_agreement_was_last_modified_on_december_23_2017"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/please_read_these_terms_of_service_completely_using_this_website_which_is_owned_and_operated_by_vastu_kosh_this_agreement_documents_the_legally_binding_terms_and_conditions_attached_to_the_use_of_this_website"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/by_using_or_accessing_the_site_in_any_way_viewing_or_browsing_the_site_creating_account_or_using_the_services_you_are_agreeing_to_be_bound_by_these_terms_of_service"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/storing_items"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/in_case_any_illegal_items_are_found_contained_in_the_articles_then_vastu_kosh_cannot_be_held_responsible_for_those_items_those_articles_will_be_discarded_a_police_report_will_be_filed_against_the_owner_and_his_her_account_will_be_suspended_immediately_for_an_indefinite_period_of_time"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView211"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/storage_duration"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView311"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/any_item_stored_in_locker_should_be_kept_for_a_minimum_duration_of_one_1_month_before_retrieval"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/pricing"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/the_pricing_of_the_items_will_be_based_upon_their_material_and_the_amount_of_space_they_will_consume_in_the_locker_every_item_will_be_insured_with_a_small_amount_of_money_paid_by_the_customer"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/insurance"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/in_case_of_any_damage_to_the_item_or_theft_of_the_item_the_customers_can_claim_insurance_amount_that_they_pay_for_storing_the_items_in_the_locker_customer_cannot_claim_more_amount_of_money_than_the_insurance_amount"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/termination"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/vastu_kosh_reserves_the_right_to_terminate_your_access_to_the_site_without_any_advance_notice_if_any_illegal_item_is_found_inside_the_articles_stored_in_our_lockers"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/return_refund_policy"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/once_a_user_buys_any_article_from_another_user_through_vastu_kosh_he_she_will_not_be_able_to_return_the_item_claiming_that_the_article_does_not_match_the_specifications_or_is_defective_we_will_send_items_to_be_sold_only_after_we_verify_its_condition_and_genuineness"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/changes_to_this_agreement"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/vastu_kosh_reserves_the_right_to_modify_these_terms_of_service_at_any_time_we_do_so_by_posting_and_drawing_attention_to_the_updated_terms_on_the_site_your_decision_to_continue_to_visit_and_make_use_of_the_site_after_such_changes_have_been_made_constitutes_your_formal_acceptance_of_the_new_terms_of_service_therefore_we_ask_that_you_check_and_review_this_agreement_for_such_changes_on_an_occasional_basis_should_you_not_agree_to_any_provision_of_this_agreement_or_any_changes_we_make_to_this_agreement_we_ask_and_advice_that_you_do_not_use_or_continue_to_access_the_vastu_kosh_site_immediately"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:onClick="backBtnClicked"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
