<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vastukosh.client.android.BuyRentViewItemActivity"
    tools:showIn="@layout/app_bar_buy_view_rent_item">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        android:contentDescription="@string/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/adItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/item_name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/adItemImage"
                android:layout_width="300dp"
                android:layout_height="190dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/back"
                android:contentDescription="@string/item_image" />

            <TextView
                android:id="@+id/adItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_price"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adItemType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_type"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adItemSubtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_subtype"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adItemOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_owner"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adItemCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_count"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adItemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_description"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adItemDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/item_duration"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/interestPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/how_much_will_you_pay"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/interestedBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:background="@drawable/super_round_edge"
                android:text="@string/interested"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
